tests/functional/lang/parse-fail-dup-attrs-7.err.exp
error: attribute 'x' already defined at «stdin»:6:12

       at «stdin»:7:12:

            6|     inherit x;
            7|     inherit x;
             |            ^
